fix scrollbar width firefox

--- a/css/commponents/swiper-block.scss
+++ b/css/commponents/swiper-block.scss
@@ -55,7 +55,11 @@
   z-index: 1;
   transition-property: transform;
   box-sizing: content-box;
-  &::-webkit-scrollbar {
+  scrollbar-width: none;
+  &::-webkit-scrollbar,
+  &::-webkit-scrollbar-button,
+  &::-webkit-scrollbar-track,
+  &::-webkit-scrollbar-thumb {
     width: 0;
     height: 0;
   }
@@ -66,11 +70,15 @@
     height: 100%;
     z-index: 1;
     // transition-property: transform;
-    box-sizing: content-box;
+    // box-sizing: content-box;
     overflow: hidden;
     overflow-x: scroll;
     gap: 20px;
-    &::-webkit-scrollbar {
+    scrollbar-width: none;
+    &::-webkit-scrollbar,
+    &::-webkit-scrollbar-button,
+    &::-webkit-scrollbar-track,
+    &::-webkit-scrollbar-thumb {
       width: 0;
       height: 0;
     }
@@ -235,7 +243,7 @@
 // }
 // @media(max-width:)
 @media (max-width: 950px) {
-  .swiper-block{
+  .swiper-block {
     min-height: 100%;
   }
   .swiper-block__container {
@@ -282,8 +290,8 @@
     width: 98%;
 
     &-wrapper {
-     display: none;
-      &-mobile{
+      display: none;
+      &-mobile {
         display: flex;
       }
     }
